samples/_failures_safe/1761279157_e2bce1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_baa59df5.c:169: error: expected ‘;’, ‘,’ or ‘)’ at end of input
